--- a/kumoApp.html
+++ b/kumoApp.html
@@ -168,6 +168,126 @@
       </div>
     </section>
 
+    <!-- Final App: Quick Description -->
+    <div class="caseStudySection">
+      <section class="caseStudyHMW-Section">
+        <div class="gridCenterer">
+          <div class="container">
+            <div class="bodyWrapper">
+              <div class="mediaCenterer">
+                <h3 class="h3-caseStudy">Alleviating Anxiety</h3>
+                <h2 class="h2-caseStudy">The Solution</h2>
+              </div>
+              <p class="bodyType">
+                Our final app enables users to track breathing rate and local attributes like dust, pollen, and
+                mould levels—these cards can be customized to the user's liking on Home. In light of the pandemic, Kumo
+                also tracks exposure to viral particles like COVID-19 and influenza. Detailed data reports can be viewed
+                by tapping into the cards. Masks can be added for connection, edited, or removed in Devices.
+                Other features include tracking filter health, profile switching to monitor close ones, and push
+                notifications for optimal awareness.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- Video Flows -->
+    <section class="caseStudySection">
+      <div class="gridCenterer">
+        <div class="container">
+          <div class="bodyWrapperMid">
+            <!-- 01-Onboarding -->
+            <div class="twoColumnAlt">
+              <div>
+                <h2 class="h2-caseStudy">Effortless Onboarding</h2>
+                <p class="bodyType">
+                  A lovely and simple first-time user experience, involving account creation and mask-pairing.
+                </p>
+              </div>
+              <div class="mediaCenterer">
+                <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                  <source src="video/kumoApp/01-Onboarding-Edit-C.mp4" type="video/mp4">
+                </video>
+              </div>
+            </div>
+
+            <!-- 02-Home -->
+            <div class="marginL3--top">
+              <div class="twoColumnAlt">
+                <div>
+                  <h2 class="h2-caseStudy">Customize Your Home</h2>
+                  <p class="bodyType">
+                    View detailed data reports on your breathing and local surroundings, and add + delete cards.
+                  </p>
+                </div>
+                <div class="mediaCenterer">
+                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                    <source src="video/kumoApp/03-Home-v2-C.mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
+            </div>
+
+            <!-- 03-Push Notifications -->
+            <div class="marginL3--top">
+              <div class="twoColumnAlt">
+                <div>
+                  <h2 class="h2-caseStudy">Push Notifications</h2>
+                  <p class="bodyType">
+                    Be notified when your mask battery is below 20% so you can change masks and charge. Also stay
+                    notified
+                    when your filter is about to die.
+                  </p>
+                </div>
+                <div class="mediaCenterer">
+                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                    <source src="video/kumoApp/04-BatteryFilter-Edit-C.mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
+            </div>
+
+            <!-- 04-Easily Switch Profiles -->
+            <div class="marginL3--top">
+              <div class="twoColumnAlt">
+                <div>
+                  <h2 class="h2-caseStudy">Easily Switch Profiles</h2>
+                  <p class="bodyType">
+                    Stay updated on a loved one's respiratory condition and manage any added accounts efficiently.
+                  </p>
+                </div>
+                <div class="mediaCenterer">
+                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                    <source src="video/kumoApp/05-ProfileSwitch-Edit-C.mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
+            </div>
+
+            <!-- 05-COVID-19 Exposure -->
+            <div class="marginL3--top">
+              <div class="twoColumnAlt">
+                <div>
+                  <h2 class="h2-caseStudy">Viral Exposure</h2>
+                  <p class="bodyType">
+                    Get notified when you come into contact with COVID-19 particles, and be recommended next steps.
+                    Monitor case counts and hotspot locations.
+                  </p>
+                </div>
+                <div class="mediaCenterer">
+                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                    <source src="video/kumoApp/06-COVID-Edit-C.mp4" type="video/mp4">
+                  </video>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Section 2: The Process -->
     <section class="caseStudySection">
       <div class="bodyWrapperWide">
@@ -626,125 +746,6 @@
         <!-- Adding Context in a Card (maybe) -->
     </section>
 
-    <!-- Final App: Quick Description -->
-    <div class="caseStudySection">
-      <section class="caseStudyHMW-Section">
-        <div class="gridCenterer">
-          <div class="container">
-            <div class="bodyWrapper">
-              <div class="mediaCenterer">
-                <h3 class="h3-caseStudy">The Launch</h3>
-                <h2 class="h2-caseStudy">An App that Alleviates Anxiety</h2>
-              </div>
-              <p class="bodyType">
-                Our final app enables users to track breathing rate and local attributes like dust, pollen, and
-                mould levels—these cards can be customized to the user's liking on Home. In light of the pandemic, Kumo
-                also tracks exposure to viral particles like COVID-19 and influenza. Detailed data reports can be viewed
-                by tapping into the cards. Masks can be added for connection, edited, or removed in Devices.
-                Other features include tracking filter health, profile switching to monitor close ones, and push
-                notifications for optimal awareness.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
-
-    <!-- Video Flows -->
-    <section class="caseStudySection">
-      <div class="gridCenterer">
-        <div class="container">
-          <div class="bodyWrapperMid">
-            <!-- 01-Onboarding -->
-            <div class="twoColumnAlt">
-              <div>
-                <h2 class="h2-caseStudy">Effortless Onboarding</h2>
-                <p class="bodyType">
-                  A lovely and simple first-time user experience, involving account creation and mask-pairing.
-                </p>
-              </div>
-              <div class="mediaCenterer">
-                <video width="75%" autoplay="" loop="" muted="" playsinline="">
-                  <source src="video/kumoApp/01-Onboarding-Edit-C.mp4" type="video/mp4">
-                </video>
-              </div>
-            </div>
-
-            <!-- 02-Home -->
-            <div class="marginL3--top">
-              <div class="twoColumnAlt">
-                <div>
-                  <h2 class="h2-caseStudy">Customize Your Home</h2>
-                  <p class="bodyType">
-                    View detailed data reports on your breathing and local surroundings, and add + delete cards.
-                  </p>
-                </div>
-                <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
-                    <source src="video/kumoApp/03-Home-v2-C.mp4" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-            </div>
-
-            <!-- 03-Push Notifications -->
-            <div class="marginL3--top">
-              <div class="twoColumnAlt">
-                <div>
-                  <h2 class="h2-caseStudy">Push Notifications</h2>
-                  <p class="bodyType">
-                    Be notified when your mask battery is below 20% so you can change masks and charge. Also stay
-                    notified
-                    when your filter is about to die.
-                  </p>
-                </div>
-                <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
-                    <source src="video/kumoApp/04-BatteryFilter-Edit-C.mp4" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-            </div>
-
-            <!-- 04-Easily Switch Profiles -->
-            <div class="marginL3--top">
-              <div class="twoColumnAlt">
-                <div>
-                  <h2 class="h2-caseStudy">Easily Switch Profiles</h2>
-                  <p class="bodyType">
-                    Stay updated on a loved one's respiratory condition and manage any added accounts efficiently.
-                  </p>
-                </div>
-                <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
-                    <source src="video/kumoApp/05-ProfileSwitch-Edit-C.mp4" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-            </div>
-
-            <!-- 05-COVID-19 Exposure -->
-            <div class="marginL3--top">
-              <div class="twoColumnAlt">
-                <div>
-                  <h2 class="h2-caseStudy">Viral Exposure</h2>
-                  <p class="bodyType">
-                    Get notified when you come into contact with COVID-19 particles, and be recommended next steps.
-                    Monitor case counts and hotspot locations.
-                  </p>
-                </div>
-                <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
-                    <source src="video/kumoApp/06-COVID-Edit-C.mp4" type="video/mp4">
-                  </video>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
 
   </div>
 
