--- a/fbintern.html
+++ b/fbintern.html
@@ -78,7 +78,7 @@
   <!-- Case study title -->
   <div class="gridCenterer">
     <header class="caseStudyHeader container reveal">
-      <h1 class="title-caseStudy">Facebook Internship</h1>
+      <h1 class="title-caseStudy">Facebook App Monetization</h1>
       <h2 class="subtitle-caseStudy">Fostering pricing clarity between creators and brands</h2>
       <h3 class="bodyType marginXS--top">Jasper Tu • 2 min read</h3>
     </header>
