--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
           <a class="projectSingle locked" href="fbintern.html">
             <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="Historia">
             <div class="reveal">
-              <h2 class="projectTitle">Facebook Internship
+              <h2 class="projectTitle">Facebook App Monetization
                 <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
                   alt="Lock">-->
               </h2>
-              <p class="projectDescription">Fostering more clarity for branded content creators &
+              <p class="projectDescription">Fostering more pricing clarity for branded content creators &
                 <span class="moreDetail">potential</span> partners.
               </p>
               <!-- <p class="awardText">
