--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
           </h1>
           <h2 class="jasperFacts moreDetail">
-            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> User advocate and YSDN
-            3rd year
+            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> User advocate, YSDN
+            3rd year, front-end coder
             <br>
             <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
               class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
