--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
         <li><a class="workNav" href="index.html">Work</a></li>
         <!-- <li><a class="playNav" href="">Play</a></li> -->
         <li><a class="aboutNav" id="active" href="about.html">About</a></li>
+        <li><a class="resumeNav" href="pdf/Jasper Tu-Resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </div>
