--- a/canadaLanguages.html
+++ b/canadaLanguages.html
@@ -67,9 +67,10 @@
     <nav>
       <li><a class="navLogo" href="index.html">J∙TU</a></li>
       <ul class="navLinks">
-        <li><a class="workNav" id="active" href="index.html">Work</a></li>
+        <li><a class="workNav" href="index.html">Work</a></li>
         <!-- <li><a class="playNav" href="">Play</a></li> -->
         <li><a class="aboutNav" href="about.html">About</a></li>
+        <li><a class="resumeNav" href="pdf/Jasper Tu-Resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </div>
