--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <li><a class="workNav" id="active" href="index.html">Work</a></li>
         <!-- <li><a class="playNav" href="">Play</a></li> -->
         <li><a class="aboutNav" href="about.html">About</a></li>
+        <li><a class="resumeNav" href="pdf/Jasper Tu-Resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </div>
