--- a/kumoApp.html
+++ b/kumoApp.html
@@ -207,7 +207,7 @@
                 </p>
               </div>
               <div class="mediaCenterer">
-                <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                <video width="65%" autoplay="" loop="" muted="" playsinline="" controls>
                   <source src="video/kumoApp/01-Onboarding-Edit-C.mp4" type="video/mp4">
                 </video>
               </div>
@@ -223,7 +223,7 @@
                   </p>
                 </div>
                 <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                  <video width="65%" autoplay="" loop="" muted="" playsinline="" controls>
                     <source src="video/kumoApp/03-Home-v2-C.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -242,7 +242,7 @@
                   </p>
                 </div>
                 <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                  <video width="65%" autoplay="" loop="" muted="" playsinline="" controls>
                     <source src="video/kumoApp/04-BatteryFilter-Edit-C.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -259,7 +259,7 @@
                   </p>
                 </div>
                 <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                  <video width="65%" autoplay="" loop="" muted="" playsinline="" controls>
                     <source src="video/kumoApp/05-ProfileSwitch-Edit-C.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -277,7 +277,7 @@
                   </p>
                 </div>
                 <div class="mediaCenterer">
-                  <video width="75%" autoplay="" loop="" muted="" playsinline="">
+                  <video width="65%" autoplay="" loop="" muted="" playsinline="" controls>
                     <source src="video/kumoApp/06-COVID-Edit-C.mp4" type="video/mp4">
                   </video>
                 </div>
