--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
                   alt="Lock">-->
               </h2>
-              <p class="projectDescription">Fostering more pricing clarity for branded content creators &
-                <span class="moreDetail">potential</span> partners.
+              <p class="projectDescription">Fostering pricing clarity for branded content creators and
+                <span class="moreDetail">potential</span> partners
               </p>
               <!-- <p class="awardText">
         <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
@@ -166,7 +166,7 @@
             <img class="projectCover" src="./img/home-cover-Kumo-Mask.jpg" loading="lazy" alt="Kumo Smart Mask">
             <div class="reveal">
               <h2 class="projectTitle">Kumo Smart Mask</h2>
-              <p class="projectDescription">Reimagining a more inclusive mask experience.</p>
+              <p class="projectDescription">Reimagining a more inclusive mask experience</p>
               <!-- <p class="awardText">
                 <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
                 Adobe Jam 1st Place
@@ -184,7 +184,7 @@
             <img class="projectCover" src="./img/home-cover-Kumo-App.jpg" loading="lazy" alt="Kumo Companion App">
             <div class="reveal">
               <h2 class="projectTitle">Kumo Companion App</h2>
-              <p class="projectDescription">Track Kumo usage and stay aware of your surroundings.</p>
+              <p class="projectDescription">Track Kumo usage and stay aware of your surroundings</p>
               <!-- <p class="awardText">
                 <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
                 Adobe Jam 1st Place
@@ -203,7 +203,7 @@
             <img class="projectCover" src="./img/home-cover-Historia.jpg" loading="lazy" alt="Historia">
             <div class="reveal">
               <h2 class="projectTitle">Historia</h2>
-              <p class="projectDescription">Empowering high school students to efficiently conduct history research.</p>
+              <p class="projectDescription">Empowering high school students to efficiently conduct history research</p>
               <!-- <p class="awardText">
                 <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
                 Adobe Jam 1st Place
@@ -212,6 +212,7 @@
               <span class="projectType">UI/UX
                 <!--<span class="moreDetail">Design</span>-->
               </span>
+              <span class="projectType">Prototyping</span>
               <span class="projectType">Mobile</span>
             </div>
           </a>
@@ -224,11 +225,12 @@
             <div class="reveal">
               <h2 class="projectTitle">Playdium</h2>
               <p class="projectDescription">Connecting kids with an educational
-                game while physically distanced.</p>
+                game while physically distanced</p>
               <span class="projectType">User Research</span>
               <span class="projectType">UI/UX
                 <!--<span class="moreDetail">Design</span>-->
               </span>
+              <span class="projectType">Prototyping</span>
               <span class="projectType">Tablet</span>
             </div>
           </a>
@@ -241,7 +243,7 @@
             <div class="reveal">
               <h2 class="projectTitle">Spark</h2>
               <p class="projectDescription">A conference connecting creative pros to mentors, opportunities, and
-                resources.</p>
+                resources</p>
               <span class="projectType">Front-End Code</span>
               <span class="projectType">Product Design</span>
               <span class="projectType">Motion Graphics</span>
@@ -255,7 +257,7 @@
             <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
             <div class="reveal">
               <h2 class="projectTitle">Canada's Languages</h2>
-              <p class="projectDescription">A website for tourists exploring Canada's top non-official languages.</p>
+              <p class="projectDescription">A website exploring Canada's top non-official languages</p>
               <span class="projectType">Data Visualization</span>
               <span class="projectType">Web Design</span>
               <span class="projectType">Illustration</span>
