--- a/kumoApp.html
+++ b/kumoApp.html
@@ -552,7 +552,7 @@
           </div>
         </div>
 
-        <!-- IxD Decision 2: Rethinking Maps -->
+        <!-- IxD Decision 2: Rethinking Maps 
         <div class="marginL2--top">
           <div class="twoColumnAlt twoColumnAlt-Reverse">
             <div>
@@ -587,11 +587,11 @@
                 alt="IxD Decision 2: Rethinking Maps After">
             </div>
           </div>
-        </div>
+        </div>-->
 
         <!-- IxD Decision 3: Profile Management -->
         <div class="marginL2--top">
-          <div class="twoColumnAlt">
+          <div class="twoColumnAlt twoColumnAlt-Reverse">
             <div>
               <h4 class="h4-caseStudy marginS2--bottom">Managing Accounts—Thinking of Edge Cases</h4>
               <p class="bodyType marginS--top">
