--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <!-- Kumo Companion App -->
         <article>
-          <a class="projectSingle" href="kumoApp.html">
+          <a class="projectSingle" href="kumoApp2.html">
             <img class="projectCover" src="./img/home-cover-Kumo-App.jpg" loading="lazy" alt="Kumo Companion App">
             <div class="reveal">
               <h2 class="projectTitle">Kumo Companion App</h2>
