--- a/about.html
+++ b/about.html
@@ -111,8 +111,9 @@
           considerate of human frailties.
         </p>
         <p class="bodyType marginS--bottom reveal">
-          In my spare time, I enjoy participating in hackathons, reading, fitness, and exploring places through
-          photography. With empathetic design, I hope to help those less fortunate and to inspire others to pursue their
+          In my spare time, I enjoy participating in hackathons, reading, fitness, exploring places through
+          photography, and gaming (talk to me all about Warzone and Genshin Impact). With empathetic design, I hope to
+          help those less fortunate and to inspire others to pursue their
           greater dreams and ambitions.
         </p>
         <hr>
