--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
               class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
             Design
             Intern<br>
-            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
-            design internships<br>
+            <!--<img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
+            design internships<br>-->
           </h2>
 
           <!--
