--- a/fbintern.html
+++ b/fbintern.html
@@ -80,7 +80,7 @@
   <div class="gridCenterer">
     <header class="caseStudyHeader container reveal">
       <h1 class="title-caseStudy">Facebook App Monetization</h1>
-      <h2 class="subtitle-caseStudy">Fostering pricing clarity between creators and brands</h2>
+      <h2 class="subtitle-caseStudy">Helping creators acquire quality deals</h2>
       <h3 class="bodyType marginXS--top">Jasper Tu • 2 min read</h3>
     </header>
   </div>
