--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
                 <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
                   alt="Lock">-->
               </h2>
-              <p class="projectDescription">Fostering pricing clarity for branded content creators and
-                <span class="moreDetail">potential</span> partners
+              <p class="projectDescription">Helping creators acquire quality deals
               </p>
               <!-- <p class="awardText">
         <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
