--- a/index.html
+++ b/index.html
@@ -76,33 +76,33 @@
   <!-- Back to top button -->
   <div class="topButton topButtonHidden" onclick="window.scrollTo(0, 0)" ;=""></div>
 
-  <!-- Large desktop header -->
-  <div class="gridCenterer">
-    <div class="container">
+  <div class="whiteBG">
+    <!-- Large desktop header -->
+    <div class="gridCenterer">
+      <div class="container">
 
-      <header class="jasperHeader marginTopBottom reveal">
-        <!-- Right side of header (text) -->
-        <div class="headerRight">
-          <h1 class="jasperTitle">
-            <span class="jasperTitleBold">Jasper Tu</span> is a product designer who loves creating enjoyable, elegant
-            and humane solutions for
-            complex
-            systems.
-            <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
-          </h1>
-          <h2 class="jasperFacts moreDetail">
-            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> YSDN
-            3rd year, user advocate, front-end coder
-            <br>
-            <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
-              class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
-            Design
-            Intern<br>
-            <!--<img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
+        <header class="jasperHeader marginTopBottom reveal">
+          <!-- Right side of header (text) -->
+          <div class="headerRight">
+            <h1 class="jasperTitle">
+              <span class="jasperTitleBold">Jasper Tu</span> is a product designer with a passion for commerce and a
+              love
+              for improving merchant experiences.
+              <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
+            </h1>
+            <h2 class="jasperFacts moreDetail">
+              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> YSDN
+              3rd year, user advocate, front-end coder
+              <br>
+              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Former <a
+                class="fbLinkHeader" href="https://design.facebook.com/" target="_blank">Facebook</a> Product
+              Design
+              Intern<br>
+              <!--<img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Seeking 2021 product
             design internships<br>-->
-          </h2>
+            </h2>
 
-          <!--
+            <!--
           <div class="socialHeader">
             <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
               <img class="socialButton hvr-push" src="./img/mail.svg" loading="lazy" alt="Email">
@@ -121,150 +121,166 @@
             </a>
           </div>-->
 
-          <div class="downButtonContainer">
-            <a class="downButton hvr-forward" address="true">
-              Selected Works
-              <img class="emoji" src="./img/redTriangleDownEmoji.png" loading="lazy" alt="Down Button">
-            </a>
+            <div class="downButtonContainer">
+              <a class="downButton hvr-forward" address="true">
+                Selected Works
+                <img class="emoji" src="./img/redTriangleDownEmoji.png" loading="lazy" alt="Down Button">
+              </a>
+            </div>
           </div>
-        </div>
 
-        <!-- Jasper illustration -->
-        <img class="headerDrawing" src="./img/peace.png" loading="lazy" alt="Unicorn">
-      </header>
+          <!-- Jasper illustration -->
+          <img class="headerDrawing" src="./img/peace.png" loading="lazy" alt="Unicorn">
+        </header>
+      </div>
+    </div>
+  </div>
 
-      <!-- Projects -->
-      <section class="projects marginTopBottom">
-        <!-- Facebook Internship -->
-        <article>
-          <a class="projectSingle locked" href="fbintern.html">
-            <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="Historia">
-            <div class="reveal">
-              <h2 class="projectTitle">Facebook App Monetization
-                <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
+  <div class="offWhiteBG">
+    <div class="gridCenterer">
+      <div class="container">
+        <!-- Projects -->
+        <section class="projects marginTopBottom">
+          <!-- Facebook Internship -->
+          <article>
+            <a class="projectSingle locked" href="fbintern.html">
+              <img class="projectCover" src="./img/home-cover-FB.jpg" loading="lazy" alt="Historia">
+              <div class="sec">
+                <h2 class="projectTitle">Facebook Internship <span class="projectArrow">→</span>
+                  <!--<img class="emoji" src="img/lockEmoji.png" loading="lazy"
                   alt="Lock">-->
-              </h2>
-              <p class="projectDescription">Helping creators acquire quality deals
-              </p>
-              <!-- <p class="awardText">
+                </h2>
+                <p class="projectDescription">Designing on the Monetization team to help creators acquire quality deals
+                </p>
+                <!-- <p class="awardText">
         <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
         Adobe Jam 1st Place
       </p> -->
-              <span class="projectType">Product Thinking</span>
-              <span class="projectType">Interaction</span>
-              <span class="projectType">Visual</span>
-              <span class="projectType">Desktop</span>
-            </div>
-          </a>
-        </article>
+                <div class="projectType-Group">
+                  <span class="projectType">Product Design</span>
+                  <span class="projectType">Internship</span>
+                  <span class="projectType">Web</span>
+                </div>
+              </div>
+            </a>
+          </article>
 
-        <!-- Kumo Smart Mask -->
-        <article>
-          <a class="projectSingle" href="https://www.notion.so/Kumo-Smart-Mask-a6ab4a3a38184989886887746a99f04e"
-            target="_blank">
-            <img class="projectCover" src="./img/home-cover-Kumo-Mask.jpg" loading="lazy" alt="Kumo Smart Mask">
-            <div class="reveal">
-              <h2 class="projectTitle">Kumo Smart Mask</h2>
-              <p class="projectDescription">Reimagining a more inclusive mask experience</p>
-              <!-- <p class="awardText">
+          <!-- Kumo Smart Mask -->
+          <article>
+            <a class="projectSingle" href="https://www.notion.so/Kumo-Smart-Mask-a6ab4a3a38184989886887746a99f04e"
+              target="_blank">
+              <img class="projectCover" src="./img/home-cover-Kumo-Mask.jpg" loading="lazy" alt="Kumo Smart Mask">
+              <div class="sec">
+                <h2 class="projectTitle">Kumo Smart Mask <span class="projectArrow">→</span></h2>
+                <p class="projectDescription">Reimagining a more inclusive mask experience</p>
+                <!-- <p class="awardText">
                 <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
                 Adobe Jam 1st Place
               </p> -->
-              <span class="projectType">Product Design</span>
-              <span class="projectType">Industrial Design</span>
-              <span class="projectType">Strategy</span>
-            </div>
-          </a>
-        </article>
+                <div class="projectType-Group">
+                  <span class="projectType">Product Design</span>
+                  <span class="projectType">Industrial Design</span>
+                </div>
+              </div>
+            </a>
+          </article>
 
-        <!-- Kumo Companion App -->
-        <article>
-          <a class="projectSingle" href="kumoApp2.html">
-            <img class="projectCover" src="./img/home-cover-Kumo-App.jpg" loading="lazy" alt="Kumo Companion App">
-            <div class="reveal">
-              <h2 class="projectTitle">Kumo Companion App</h2>
-              <p class="projectDescription">Track Kumo usage and stay aware of your surroundings</p>
-              <!-- <p class="awardText">
+          <!-- Kumo Companion App -->
+          <article>
+            <a class="projectSingle" href="kumoApp2.html">
+              <img class="projectCover" src="./img/home-cover-Kumo-App.jpg" loading="lazy" alt="Kumo Companion App">
+              <div class="sec">
+                <h2 class="projectTitle">Kumo Companion App <span class="projectArrow">→</span></h2>
+                <p class="projectDescription">Track Kumo usage and stay aware of your surroundings</p>
+                <!-- <p class="awardText">
                 <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
                 Adobe Jam 1st Place
               </p> -->
-              <span class="projectType">UI/UX</span>
-              <span class="projectType">Research</span>
-              <span class="projectType">User Testing</span>
-              <span class="projectType">UX Writing</span>
-            </div>
-          </a>
-        </article>
+                <div class="projectType-Group">
+                  <span class="projectType">UI/UX</span>
+                  <span class="projectType">Research</span>
+                  <span class="projectType">Prototyping</span>
+                  <span class="projectType">Testing</span>
+                </div>
+              </div>
+            </a>
+          </article>
 
-        <!-- Historia -->
-        <article>
-          <a class="projectSingle" href="https://www.behance.net/gallery/93816461/Historia" target="_blank">
-            <img class="projectCover" src="./img/home-cover-Historia.jpg" loading="lazy" alt="Historia">
-            <div class="reveal">
-              <h2 class="projectTitle">Historia</h2>
-              <p class="projectDescription">Empowering high school students to efficiently conduct history research</p>
-              <!-- <p class="awardText">
+          <!-- Historia -->
+          <article>
+            <a class="projectSingle" href="https://www.behance.net/gallery/93816461/Historia" target="_blank">
+              <img class="projectCover" src="./img/home-cover-Historia.jpg" loading="lazy" alt="Historia">
+              <div class="sec">
+                <h2 class="projectTitle">Historia <span class="projectArrow">→</span></h2>
+                <p class="projectDescription">Empowering high school students to efficiently conduct history research
+                </p>
+                <!-- <p class="awardText">
                 <img class="adobeIcon" src="./img/adobe.svg" loading="lazy" alt="Adobe">
                 Adobe Jam 1st Place
               </p> -->
-              <span class="projectType">User Research</span>
-              <span class="projectType">UI/UX
-                <!--<span class="moreDetail">Design</span>-->
-              </span>
-              <span class="projectType">Prototyping</span>
-              <span class="projectType">Mobile</span>
-            </div>
-          </a>
-        </article>
+                <div class="projectType-Group">
+                  <span class="projectType">Hackathon Winner
+                    <!--<span class="moreDetail">Design</span>-->
+                  </span>
+                  <span class="projectType">UI/UX</span>
+                  <span class="projectType">Mobile</span>
+                </div>
+              </div>
+            </a>
+          </article>
 
-        <!--Playdium-->
-        <article>
-          <a class="projectSingle" href="playdium.html">
-            <img class="projectCover" src="./img/home-cover-Playdium.jpg" loading="lazy" alt="Historia">
-            <div class="reveal">
-              <h2 class="projectTitle">Playdium</h2>
-              <p class="projectDescription">Connecting kids with an educational
-                game while physically distanced</p>
-              <span class="projectType">User Research</span>
-              <span class="projectType">UI/UX
-                <!--<span class="moreDetail">Design</span>-->
-              </span>
-              <span class="projectType">Prototyping</span>
-              <span class="projectType">Tablet</span>
-            </div>
-          </a>
-        </article>
+          <!--Playdium-->
+          <article>
+            <a class="projectSingle" href="playdium.html">
+              <img class="projectCover" src="./img/home-cover-Playdium.jpg" loading="lazy" alt="Historia">
+              <div class="sec">
+                <h2 class="projectTitle">Playdium <span class="projectArrow">→</span></h2>
+                <p class="projectDescription">Connecting kids with an educational
+                  game while physically distanced</p>
+                <div class="projectType-Group">
+                  <span class="projectType">Hackathon Finalist</span>
+                  <span class="projectType">UI/UX</span>
+                  <span class="projectType">Tablet</span>
+                </div>
+              </div>
+            </a>
+          </article>
 
-        <!--Spark-->
-        <article>
-          <a class="projectSingle" href="spark.html">
-            <img class="projectCover" src="./img/home-cover-Spark.jpg" loading="lazy" alt="Historia">
-            <div class="reveal">
-              <h2 class="projectTitle">Spark</h2>
-              <p class="projectDescription">A conference connecting creative pros to mentors, opportunities, and
-                resources</p>
-              <span class="projectType">Front-End Code</span>
-              <span class="projectType">Product Design</span>
-              <span class="projectType">Motion Graphics</span>
-            </div>
-          </a>
-        </article>
+          <!--Spark-->
+          <article>
+            <a class="projectSingle" href="spark.html">
+              <img class="projectCover" src="./img/home-cover-Spark.jpg" loading="lazy" alt="Historia">
+              <div class="sec">
+                <h2 class="projectTitle">Spark <span class="projectArrow">→</span></h2>
+                <p class="projectDescription">A conference connecting creative pros to mentors, opportunities, and
+                  resources</p>
+                <div class="projectType-Group">
+                  <span class="projectType">Front-End Code</span>
+                  <span class="projectType">Motion Design</span>
+                  <span class="projectType">Web</span>
+                </div>
+              </div>
+            </a>
+          </article>
 
-        <!--Canada's Languages-->
-        <article>
-          <a class="projectSingle" href="canadaLanguages.html">
-            <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
-            <div class="reveal">
-              <h2 class="projectTitle">Canada's Languages</h2>
-              <p class="projectDescription">A website exploring Canada's top non-official languages</p>
-              <span class="projectType">Data Visualization</span>
-              <span class="projectType">Web Design</span>
-              <span class="projectType">Illustration</span>
-            </div>
-          </a>
-        </article>
+          <!--Canada's Languages-->
+          <article>
+            <a class="projectSingle" href="canadaLanguages.html">
+              <img class="projectCover" src="./img/home-cover-Languages.jpg" loading="lazy" alt="Historia">
+              <div class="sec">
+                <h2 class="projectTitle">Canada's Languages <span class="projectArrow">→</span></h2>
+                <p class="projectDescription">A website exploring Canada's top non-official languages</p>
+                <div class="projectType-Group">
+                  <span class="projectType">Data Viz</span>
+                  <span class="projectType">Illustration</span>
+                  <span class="projectType">Web</span>
+                </div>
+              </div>
+            </a>
+          </article>
 
-      </section>
+        </section>
+      </div>
     </div>
   </div>
 
