--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
           <!-- Right side of header (text) -->
           <div class="headerRight">
             <h1 class="jasperTitle">
-              <span class="jasperTitleBold">Jasper Tu</span> is a product designer with a passion for commerce and a
-              love
-              for improving merchant experiences.
+              <span class="jasperTitleBold">Jasper Tu</span> is a data-informed product designer passionate about
+              pioneering
+              innovative opportunities for all.
               <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
             </h1>
             <h2 class="jasperFacts moreDetail">
