--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
       </div>
 
       <div class="footerRight">
-        <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
+        <a href="mailto:jasper_tu@outlook.com?subject=Design%20Inquiry" class="button">Get in touch</a>
         <p class="smallText elsewhereMargin">Elsewhere</p>
         <div class="socialFooter">
           <a href="https://www.linkedin.com/in/jaspertu/" target="_blank">
