--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       </div>
 
       <div class="footerRight">
-        <a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" class="button">Get in touch</a>
+        <a href="mailto:jasper_tu@outlook.com?subject=Design%20Inquiry" class="button">Get in touch</a>
         <p class="smallText elsewhereMargin">Elsewhere</p>
         <div class="socialFooter">
           <!--<a href="mailto:jaspertu@my.yorku.ca?subject=Design%20Inquiry" target="_blank">
