--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
               <!--<img class="emojiLarge" src="./img/peaceSignEmoji.png" loading="lazy" alt="Peace Sign">-->
             </h1>
             <h2 class="jasperFacts moreDetail">
+              <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> Product Design Intern
+              at <a class="fbLinkHeader" href="https://ux.shopify.com/" target="_blank">Shopify</a>
+              <br>
               <img class="emoji" src="./img/rightArrowEmoji.png" loading="lazy" alt="Right Arrow"> YSDN
               3rd year, user advocate, front-end coder
               <br>
